--- a/SMPED/BPC/jupyter/6.salvar_csv.ipynb
+++ b/SMPED/BPC/jupyter/6.salvar_csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,21 +15,32 @@
     "import folium\n",
     "import csv\n",
     "\n",
-    "regiao_ibge = \"../../../../free_wheels/scripts/python/data/distritos-latlong.json\"\n",
+    "regiao_ibge = \"data/distritos-latlong.json\"\n",
+    "subpref_f = 'data/subprefeituras.csv'\n",
     "\n",
     "f = open(regiao_ibge, 'r')\n",
     "mapa = json.load(f)\n",
+    "\n",
+    "subprefeituras = {}\n",
+    "subprefeituras_pessoas = {}\n",
+    "with open(subpref_f, 'r') as csvfile:\n",
+    "    spamreader = csv.DictReader(csvfile, delimiter=',')\n",
+    "    for row in spamreader:\n",
+    "        subprefeituras[row['Distrito']] = row['Subprefeitura']\n",
+    "        subprefeituras_pessoas[row['Subprefeitura']] = 0\n",
     "\n",
     "regioes = {}\n",
     "regioes_recebe_beneficio = {}\n",
     "regioes_renda = {}\n",
     "regioes_renda_recebe_beneficio = {}\n",
+    "regioes_nome = {}\n",
     "\n",
     "for regiao in mapa['features']:\n",
     "    regioes[regiao['properties']['ds_codigo']] = 0\n",
     "    regioes_recebe_beneficio[regiao['properties']['ds_codigo']] = 0\n",
     "    regioes_renda[regiao['properties']['ds_codigo']] = 0\n",
     "    regioes_renda_recebe_beneficio[regiao['properties']['ds_codigo']] = 0\n",
+    "    regioes_nome[regiao['properties']['ds_nome']] = 0\n",
     "\n",
     "dbname = 'SMPED'\n",
     "user = 'lima'\n",
@@ -47,6 +58,12 @@
     "        cur.execute(\"select count(*), AVG(VLR_RENDA_MEDIA_FAM) from dados_bpc where regiao_ibge = '\"+str(regiao['properties']['ds_codigo'])+\"'\")      \n",
     "        row = cur.fetchall()\n",
     "        regioes[regiao['properties']['ds_codigo']] = int(row[0][0])\n",
+    "        regioes_nome[regiao['properties']['ds_nome']] += int(row[0][0])\n",
+    "        if regiao['properties']['ds_nome'] not in subprefeituras:\n",
+    "            print(regiao['properties']['ds_nome'] + \": \" + str(row[0][0]))\n",
+    "        else:\n",
+    "            subprefeituras_pessoas[subprefeituras[regiao['properties']['ds_nome']]] += int(row[0][0])\n",
+    "        \n",
     "        if row[0][1] is not None:\n",
     "            regioes_renda[regiao['properties']['ds_codigo']] = int(100*float(row[0][1]))/100\n",
     "        \n",
@@ -74,8 +91,17 @@
     "save_file('data/regioes.csv', regioes)\n",
     "save_file('data/regioes_renda.csv', regioes)\n",
     "save_file('data/regioes_recebe_beneficio.csv', regioes_recebe_beneficio)\n",
-    "save_file('data/regioes_renda_recebe_beneficio.csv', regioes_renda_recebe_beneficio)"
+    "save_file('data/regioes_renda_recebe_beneficio.csv', regioes_renda_recebe_beneficio)\n",
+    "save_file('data/regioes_nome.csv', regioes_nome)\n",
+    "save_file('data/subprefeituras_pessoas.csv', subprefeituras_pessoas)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
